syntax = "proto3";

package no.nav.pdlsf.proto;

option java_package = "no.nav.pdlsf.proto";
option java_outer_classname = "PersonProto";

// this message will be the key part of kafka payload
message PersonKey {
  string aktoer_id = 1;
}

message Navn {
  string fornavn = 1;
  string mellomnavn = 2;
  string etternavn = 3;
}

message Vegadresse {
  string kommunenummer = 1;
  string adressenavn = 2;
  string husnummer = 3;
  string husbokstav = 4;
  string postnummer = 5;
  string koordinater = 6;
}

message Matrikkeladresse {
  string kommunenummer = 1;
  string postnummer = 2;
    string bydelsnummer = 3;
    string koordinater = 4;
}

message UkjentBosted {
  string bostedskommune = 1;
}

message UtenlandskAdresse {
  string adressenavnNummer = 1;
  string bygningEtasjeLeilighet = 2;
  string postboksNummerNavn = 3;
  string postkode = 4;
  string bySted = 5;
  string regionDistriktOmraade = 6;
  string landkode = 7;
}

message Adresser {
  repeated Vegadresse vegadresse = 1;
  repeated Matrikkeladresse matrikkeladresse = 2;
  repeated UtenlandskAdresse utenlandskAdresse = 3;
  repeated UkjentBosted ukjentBosted = 4;
}

message Familierelasjon {
  string relatertPersonsIdent = 1;
  string relatertPersonsRolle = 2;
  string minRolleForPerson = 3;
}

message UtflyttingFraNorge {
  string tilflyttingsland = 1;
  string tilflyttingsstedIUtlandet = 2;
}

message InnflyttingTilNorge {
  string fraflyttingsland = 1;
  string fraflyttingsstedIUtlandet = 2;
}

message Sikkerhetstiltak {
    string beskrivelse = 1;
    string tiltakstype = 2;
    string gyldigFraOgMed = 3;
    string gyldigTilOgMed = 4;
    string kontaktpersonId = 5;
    string kontaktpersonEnhet = 6;
}

message Sivilstand {
  string type = 1;
  string gyldigFraOgMed = 2;
  string relatertVedSivilstand = 3;
}

message Telefonnummer {
  string landkode = 1;
  string nummer = 2;
  int32 prioritet = 3;
}

message Doedsfall {
    string doedsdato = 1;
    string master = 2;
}

// this message will be the value part of kafka payload
message PersonValue {
  // aktoerid will be placed as key
  string folkeregisterId = 1;
  repeated Navn navn = 2;
  repeated Familierelasjon familierelasjoner = 3;
  repeated string folkeregisterpersonstatus = 4;
  repeated InnflyttingTilNorge innflyttingTilNorge = 7;
  repeated string adressebeskyttelse = 8;
  repeated Sikkerhetstiltak sikkerhetstiltak = 9;
  Adresser bostedsadresse = 10;
  Adresser oppholdsadresse = 11;
  repeated string statsborgerskap = 12;
  repeated Sivilstand sivilstand = 13;
  string kommunenummeFraGt = 14;
  string kommunenummeFraAdresse = 15;
  repeated string kjoenn = 16;
  repeated Doedsfall doedsfall = 18;
  repeated Telefonnummer telefonnummer = 19;
  repeated UtflyttingFraNorge utflyttingFraNorge = 20;
  repeated string talesspraaktolk = 21;
}